# TSP-IT

./: LICENSE  README.md
experiments/: TSP_detection_distributions.ipynb  TSP_multidimensional_analysis.ipynb  TSP_params_sensitivity.ipynb  detection_tradeoff_curves.ipynb
experiments/utils/: distributions.py  partition_tests.py
src/: CMakeLists.txt  TSP.cpp  TSP.h  TSPNode.cpp  TSPNode.h
